force-app/main/default/objects/z_SObjectDescription__c/z_SObjectDescription__c.object-meta.xml
<CustomObject>
    <label>SObject</label>
    <nameField>
        <label>SObject Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>