force-app/main/default/objects/z_SObjectDescription__c/fields/isCustomSetting__c.field-meta.xml
<CustomField>
    <fullName>isCustomSetting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCustomSetting</label>
    <type>Checkbox</type>
</CustomField>