force-app/main/default/objects/z_SObjectDescription__c/fields/isDeltable__c.field-meta.xml
<CustomField>
    <fullName>isDeltable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDeltable</label>
    <type>Checkbox</type>
</CustomField>