force-app/main/default/objects/z_SObjectDescription__c/fields/isDeprecatedAndHidden__c.field-meta.xml
<CustomField>
    <fullName>isDeprecatedAndHidden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDeprecatedAndHidden</label>
    <type>Checkbox</type>
</CustomField>