force-app/main/default/objects/z_SObjectDescription__c/fields/isFeedEnabled__c.field-meta.xml
<CustomField>
    <fullName>isFeedEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isFeedEnabled</label>
    <type>Checkbox</type>
</CustomField>