force-app/main/default/objects/z_SObjectDescription__c/fields/isMergeable__c.field-meta.xml
<CustomField>
    <fullName>isMergeable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMergeable</label>
    <type>Checkbox</type>
</CustomField>