force-app/main/default/objects/z_SObjectDescription__c/fields/isQueryable__c.field-meta.xml
<CustomField>
    <fullName>isQueryable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isQueryable</label>
    <type>Checkbox</type>
</CustomField>