force-app/main/default/objects/z_SObjectDescription__c/fields/isSearchable__c.field-meta.xml
<CustomField>
    <fullName>isSearchable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSearchable</label>
    <type>Checkbox</type>
</CustomField>