force-app/main/default/objects/z_SObjectDescription__c/fields/isUndeletable__c.field-meta.xml
<CustomField>
    <fullName>isUndeletable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isUndeletable</label>
    <type>Checkbox</type>
</CustomField>