force-app/main/default/objects/z_SObjectDescription__c/fields/keyPrefix__c.field-meta.xml
<CustomField>
    <fullName>keyPrefix__c</fullName>
    <label>keyPrefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>