force-app/main/default/objects/z_SObjectDescription__c/fields/labelPlural__c.field-meta.xml
<CustomField>
    <fullName>labelPlural__c</fullName>
    <label>labelPlural</label>
    <length>255</length>
    <type>Text</type>
</CustomField>