force-app/main/default/objects/z_SObjectDescription__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>label__c</columns>
    <columns>isAccessible__c</columns>
    <columns>isCreateable__c</columns>
    <columns>isCustom__c</columns>
    <columns>isCustomSetting__c</columns>
    <columns>isDeltable__c</columns>
    <columns>isDeprecatedAndHidden__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>